--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
     "@mui/material-nextjs": "^7.3.7",
+    "highlight.js": "^11.10.0",
     "firebase": "^12.8.0",
     "jotai": "^2.17.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
