--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
     "@mui/material-nextjs": "^7.3.7",
-    "highlight.js": "^11.10.0",
     "firebase": "^12.8.0",
+    "firebase-admin": "^13.6.1",
+    "highlight.js": "^11.10.0",
     "jotai": "^2.17.0",
     "next": "16.1.6",
     "react": "19.2.3",
